--- a/news-portal/package.json
+++ b/news-portal/package.json
@@ -12,10 +12,13 @@
     "deploy": "gh-pages -d dist",
     "clean": "rm -rf dist"
   },
-  
   "dependencies": {
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
